--- a/package.json
+++ b/package.json
@@ -10,31 +10,35 @@
   "author": "Andreas Goebel",
   "license": "MIT",
   "devDependencies": {
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "babel-plugin-transform-regenerator": "^6.24.1",
     "babel-plugin-transform-runtime": "^6.23.0",
-    "eslint": "^3.19.0",
-    "eslint-loader": "^1.7.1",
-    "file-loader": "^0.9.0",
-    "loader-utils": "^0.2.16",
-    "transform-runtime": "0.0.0",
-    "uglifyjs-webpack-plugin": "^0.4.3",
-    "webpack": "^2.6.1",
-    "webpack-dev-server": "^2.2.1"
+    "eslint": "^4.0.0",
+    "eslint-loader": "^1.8.0",
+    "file-loader": "^0.11.2",
+    "loader-utils": "^1.1.0",
+    "uglify-es": "^3.0.18",
+    "uglify-js": "^3.0.18",
+    "uglifyjs-webpack-plugin": "^0.4.6",
+    "webpack": "^3.0.0",
+    "webpack-dev-server": "^2.5.0",
+    "webpack-sources": "^1.0.1"
   },
   "dependencies": {
     "babel-core": "^6.25.0",
-    "babel-eslint": "^7.2.1",
-    "babel-loader": "^6.4.1",
+    "babel-eslint": "^7.2.3",
+    "babel-loader": "^7.1.0",
     "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-es2017": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
-    "barfoos": "file:../barfoos2.0/",
-    "css-loader": "~0.15.6",
+    "barfoos2.0": "^0.2.7",
+    "css-loader": "^0.28.4",
     "hls.js": "^0.7.9",
-    "node-libs-browser": "~0.5.2",
+    "node-libs-browser": "^2.0.0",
     "raw-loader": "^0.5.1",
-    "socket.io": "^1.7.3",
-    "style-loader": "^0.13.2",
+    "socket.io": "^2.0.3",
+    "style-loader": "^0.18.2",
     "template-string-loader": "0.0.3",
     "url-loader": "^0.5.8"
   },
@@ -68,7 +72,7 @@
       "es6": true
     },
     "parserOptions": {
-      "ecmaVersion": 6,
+      "ecmaVersion": 7,
       "sourceType": "module",
       "allowImportExportEverywhere": true
     }
