--- a/package.json
+++ b/package.json
@@ -1,80 +1,5 @@
 {
-  "name": "reveal",
-  "version": "0.1.0",
-  "description": "Kickoff test",
-  "main": "index.js",
-  "scripts": {
-    "dev": "webpack --mode development --watch --progress --config webpack.dev",
-    "prod": "webpack --config webpack.prod"
-  },
-  "author": "Andreas Goebel",
-  "license": "MIT",
-  "devDependencies": {
-    "eslint": "^4.0.0",
-    "eslint-loader": "^1.9.0",
-    "file-loader": "^6.2.0",
-    "loader-utils": "^1.1.0",
-    "uglify-es": "^3.0.24",
-    "uglify-js": "^3.0.24",
-    "uglifyjs-webpack-plugin": "^0.4.6",
-    "webpack": "^5.65.0",
-    "webpack-cli": "^4.9.1",
-    "webpack-dev-server": "^2.5.1",
-    "webpack-sources": "^1.0.1"
-  },
   "dependencies": {
-    "babel-core": "^6.25.0",
-    "babel-eslint": "^7.2.3",
-    "babel-loader": "^7.1.1",
-    "babel-polyfill": "^6.23.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-es2017": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
-    "barfoos2.0": "^0.3.0",
-    "css-loader": "^0.28.4",
-    "hls.js": "^0.7.10",
-    "node-libs-browser": "^2.0.0",
-    "raw-loader": "^0.5.1",
-    "sass": "^1.46.0",
-    "sass-loader": "^12.4.0",
-    "socket.io": "^2.0.3",
-    "style-loader": "^3.3.1",
-    "template-string-loader": "0.0.3",
-    "url-loader": "^0.5.9"
-  },
-  "eslintConfig": {
-    "parser": "babel-eslint",
-    "extends": "eslint:recommended",
-    "rules": {
-      "indent": [
-        "warn",
-        "tab"
-      ],
-      "linebreak-style": [
-        "error",
-        "unix"
-      ],
-      "quotes": [
-        "error",
-        "single"
-      ],
-      "semi": [
-        "error",
-        "always"
-      ],
-      "no-console": "warn",
-      "no-debugger": "warn",
-      "no-unused-vars": "warn"
-    },
-    "env": {
-      "browser": true,
-      "node": true,
-      "es6": true
-    },
-    "parserOptions": {
-      "ecmaVersion": 7,
-      "sourceType": "module",
-      "allowImportExportEverywhere": true
-    }
+    "axios": "^1.5.1"
   }
 }
